tests/baselines/reference/superInConstructorParam1.errors.txt
==== tests/cases/compiler/superInConstructorParam1.ts (2 errors) ====
    class B {
      public foo(): number {
        return 0;
      }
    }
    
    class C extends B {
      constructor(a = super.foo()) {
      ~~~~~~~~~~~
!!! superInConstructorParam1.ts(8,3): error TS2105: Constructors for derived classes must contain a 'super' call.
                      ~~~~~
!!! superInConstructorParam1.ts(8,19): error TS2193: 'super' cannot be referenced in constructor arguments.
      }
    }